// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimeFieldBuilder 1`] = `
Field {
  "format": "MM/DD/YYYY hh:mm A",
  "label": "Date",
  "meta": Object {},
  "noWrap": false,
  "schemaConfig": Object {
    "defaultVal": null,
    "nullable": true,
    "type": "date",
  },
  "type": "date-time",
  "width": Object {
    "xs": 12,
  },
}
`;

exports[`DateTimeFieldBuilder 2`] = `
Field {
  "format": "MM/YYYY",
  "label": "Date",
  "meta": Object {},
  "noWrap": false,
  "schemaConfig": Object {
    "defaultVal": null,
    "nullable": true,
    "type": "date",
  },
  "type": "date",
  "width": Object {
    "xs": 12,
  },
}
`;

exports[`DateTimeFieldBuilder 3`] = `
Field {
  "format": "hh:mm",
  "label": "Time",
  "meta": Object {},
  "noWrap": false,
  "schemaConfig": Object {
    "defaultVal": null,
    "nullable": true,
    "type": "date",
  },
  "type": "time",
  "width": Object {
    "xs": 12,
  },
}
`;
